--- a/app/templates/Librarian.html
+++ b/app/templates/Librarian.html
@@ -1,102 +1,23 @@
-{% extends 'base.html' %} 
+{% extends 'mng-base.html' %} 
 {%block title%} Librarian: {{ name }} {%endblock%}
-{% block head %}
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
 
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
-    <!-- Custom styles for this template -->
-    <link href="{{ url_for('static', filename = 'CSS/dashboard.css') }}" rel="stylesheet">
-
-{% endblock %}
     
 
 {% block content %}
-<div class="container-fluid">
-  <div class="row">
-    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-        <div class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted"> Welcome {{name}}</div>
-      <div class="position-sticky pt-3">
-       
-        <ul class="nav flex-column">
-            
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">
-              <span data-feather="book-open"></span>
-              Loans
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="clock"></span>
-              Overdo
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="book"></span>
-              Books
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="users"></span>
-              Customers
-            </a>
-          </li>
-        </ul>
 
-        <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-          <span>Management</span>
-        
-        </h6>
-        <ul class="nav flex-column mb-2">
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="delete"></span>
-              Add/Remove Customers
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="delete"></span>
-              Add/Remove Books
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text"></span>
-              Manage Loans
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <main class=" py-5 bg-light" style="margin-left: 10%; margin-top: 10%;">
   
 
-    <div class="container " >
-    <div class=" mng-container ">
-      <h2>Loans</h2>
-      <div class="table-responsive">
-        <table class=" table-scroll  ">
+    <div class=" bg-light " style = "padding: 1rem; border-radius: .25rem;">
+      
+      <h2>Loans </h2>
+        <h6>{{total}} Total</h6>
+      <div class="table-responsive-sm table-fit tableFixHead ">
+        <table >
           <thead >
             <tr>
-                <th class="th" scope="col">#</th>
-                <th class="th.fit"scope="col">Loan No</th>
-                <th class="th.fit"scope="col">Customer ID</th>
+                <th scope="col-sm">#</th>
+                <th scope="col-sm">Loan ID</th>
+                <th scope="col">Customer ID</th>
                 <th scope="col">Customer</th>
                 <th scope="col">Book ID</th>
                 <th scope="col">Book</th>
@@ -125,18 +46,10 @@
             {% endfor %}
           </tbody>
         </table>
-      </div>
-    </div>
-    </div>
-    </main>
+      
   </div>
-</div>
 
 
 
-   
-
-<script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js" integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha" crossorigin="anonymous"></script>
-<script src="{{ url_for('static', filename = 'JS/dashboard.js') }}"></script>
+ 
 {% endblock %}
