--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -15,8 +15,7 @@
                     </p>
                     <p>
                     <p class="lead text-muted"></p>
-                    <p>
-
+                    <a  data-toggle="tab" class="nav-link" href="https://github.com/YairNotkovich/FirstProject.git">the project on GIThub </a>
                     </p>
                 </div>
             </div>
