--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,7 +30,7 @@
 
                             <img src="{{ book[3]}}" alt="{{book[1]}}" class="book-img">
                             <div class="card-body">
-                                <p class="card-text text-start">{{book.description}}</p>
+                                <p class="card-text text-start">{{book[4]}}</p>
                                 <form method="POST" action="/">
 
                                 {% if current_user.is_authenticated %} 
