--- a/app/templates/mng-base.html
+++ b/app/templates/mng-base.html
@@ -27,31 +27,35 @@
         <div class="position-sticky pt-3">
          
           <ul class="nav nav-pills nav-stacked flex-column">
-              
+              <form action="{{ url_for('admin.reports') }}" method ="POST">
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('admin.main') }}">
+              <button class="nav-link" name ="loans">
+              
                 <span data-feather="book-open"></span>
                 Loans
-              </a>
+              
+            </button>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('admin.overdo_pg') }}">
+              <button class="nav-link" name="overdo">
                 <span data-feather="clock"></span>
                 Overdo
-              </a>
+              </button>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('admin.books_pg') }}">
+              <button class="nav-link" name="books">
                 <span data-feather="book"></span>
                 Books
-              </a>
+              </button>
             </li>
             <li class="nav-item">
-              <a class="nav-link"  href="{{ url_for('admin.customers_pg') }}">
+              <button class="nav-link"  name="customers">
                 <span data-feather="users"></span>
                 Customers
-              </a>
+              </button>
             </li>
+          </form>
+
             <li class="nav-item">
               <a class="nav-link" value ="add_customer.html"  href="{{ url_for('admin.add_customers') }}">
                 <span data-feather="settings"></span>
@@ -82,8 +86,8 @@
         </div>
     </div>
 </nav>
-<main class="container py-5 bg-clear justify-content-between ">
-    <!-- <div class="py-5 bg-clear"></div> -->
+<main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+  <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
 
 {% block content %}
 
@@ -91,8 +95,8 @@
 {% endblock %}
 <!-- </div> -->
 </div>
-</div>
-</div>
+
+</main>
 
 <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js" integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha" crossorigin="anonymous"></script>
